docs/6.x/docs/components/Menu/Menu.mdx
---
title: Menu
---

import PropTable from '@docs/components/PropTable.tsx';
import ExtendsLink from '@docs/components/ExtendsLink.tsx';
import ThemeColorsTable from '@docs/components/ThemeColorsTable.tsx';
import ScreenshotTabs from '@docs/components/ScreenshotTabs.tsx';
import ExtendedExample from '@docs/components/ExtendedExample.tsx';

Menus display a list of choices on temporary elevated surfaces. Their placement varies based on the element that opens them.

Follows [Material Design 3 menus](https://m3.material.io/components/menus/specs): container
`corner.large`, fill `surfaceContainerLow` (elevation controls shadow only), item label
`labelLarge`, selected items use `tertiaryContainer` / `onTertiaryContainer`.




  <ScreenshotTabs screenshotData={{"with icons":"screenshots/menu-1.png","selected + supporting":"screenshots/menu-2.png","vibrant scheme":"screenshots/menu-3.png","bottom anchor":"screenshots/menu-4.png"}}/>


## Usage
```js
import * as React from 'react';
import { View } from 'react-native';
import { Button, Menu, Divider, PaperProvider } from 'react-native-paper';

const MyComponent = () => {
  const [visible, setVisible] = React.useState(false);

  const openMenu = () => setVisible(true);

  const closeMenu = () => setVisible(false);

  return (
    <PaperProvider>
      <View
        style={{
          paddingTop: 50,
          flexDirection: 'row',
          justifyContent: 'center',
        }}>
        <Menu
          visible={visible}
          onDismiss={closeMenu}
          anchor={<Button onPress={openMenu}>Show menu</Button>}>
          <Menu.Item
            leadingIcon="content-paste"
            onPress={() => {}}
            title="Paste"
            supportingText="Insert clipboard"
            trailingSupportingText="⌘V"
            selected
          />
          <Menu.Item onPress={() => {}} title="Undo" />
          <Divider />
          <Menu.Section title="More">
            <Menu.Item onPress={() => {}} title="Share" dense />
          </Menu.Section>
        </Menu>
        <Menu
          visible={false}
          onDismiss={() => {}}
          colorScheme="vibrant"
          anchor={<Button onPress={() => {}}>Vibrant</Button>}>
          <Menu.Item onPress={() => {}} title="Featured" selected />
        </Menu>
      </View>
    </PaperProvider>
  );
};

export default MyComponent;
```

### Note
When using `Menu` within a React Native's `Modal` component, you need to wrap all
`Modal` contents within a `PaperProvider` in order for the menu to show. This
wrapping is not necessary if you use Paper's `Modal` instead.


  ## Props
  <span />



<div>

### visible (required)

</div>

  <PropTable componentLink="Menu/Menu" prop="visible" />

<div>

### anchor (required)

</div>

  <PropTable componentLink="Menu/Menu" prop="anchor" />

<div>

### anchorPosition

</div>

  <PropTable componentLink="Menu/Menu" prop="anchorPosition" />

<div>

### statusBarHeight

</div>

  <PropTable componentLink="Menu/Menu" prop="statusBarHeight" />

<div>

### onDismiss

</div>

  <PropTable componentLink="Menu/Menu" prop="onDismiss" />

<div>

### overlayAccessibilityLabel

</div>

  <PropTable componentLink="Menu/Menu" prop="overlayAccessibilityLabel" />

<div>

### children (required)

</div>

  <PropTable componentLink="Menu/Menu" prop="children" />

<div>

### contentStyle

</div>

  <PropTable componentLink="Menu/Menu" prop="contentStyle" />

<div>

### style

</div>

  <PropTable componentLink="Menu/Menu" prop="style" />

<div>

### elevation

</div>

  <PropTable componentLink="Menu/Menu" prop="elevation" />

<div>

### mode

</div>

  <PropTable componentLink="Menu/Menu" prop="mode" />

<div>

### colorScheme

</div>

  <PropTable componentLink="Menu/Menu" prop="colorScheme" />

<div>

### theme

</div>

  <PropTable componentLink="Menu/Menu" prop="theme" />

<div>

### keyboardShouldPersistTaps

</div>

  <PropTable componentLink="Menu/Menu" prop="keyboardShouldPersistTaps" />

<div>

### testID

</div>

  <PropTable componentLink="Menu/Menu" prop="testID" />



<span />


  ## Theme colors

  <ThemeColorsTable themeColorsData={{"standard":{"backgroundColor":"theme.colors.surfaceContainerLow"},"vibrant":{"backgroundColor":"theme.colors.tertiaryContainer"},"selected item":{"backgroundColor":"theme.colors.tertiaryContainer","textColor":"theme.colors.onTertiaryContainer"}}} componentName="Menu" />


<span />
